--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "Shivam Thakur",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
-    "express": "^4.21.1",
+    "express": "^4.17.1",
+    "express-session": "^1.18.1",
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
-    "mongoose": "^8.8.2"
+    "mongoose": "^8.14.1"
   }
 }
