--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "v23.11.0"
+  },
   "name": "majorproject_airbnb",
   "version": "1.0.0",
   "description": "Creating a major project with full functioning, we'll use everything FrontEnd, BackEnd and Database",
@@ -12,6 +15,7 @@
     "@mapbox/mapbox-sdk": "^0.16.1",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
